tests/neg/typealias/talias-00.ts
/*@ alias nat = {number | 1000 <= v } */

/*@ z :: #nat */
var z = 12;

